tolk-tester/tests/invalid-syntax/err-3001.tolk
tolk asdf;

/**
@compilation_should_fail
@stderr expected semver, like `tolk 1.2`, got `asdf`
@stderr tolk asdf;
 */
